fixing contrast

--- a/wp-content/themes/uwsod-2014/less/uw.dental.less
+++ b/wp-content/themes/uwsod-2014/less/uw.dental.less
@@ -553,7 +553,7 @@ h2.uw-site-title {
 .on-campus .tile h2 {color:#85754d;font-weight:700;font-size:14px;text-transform:uppercase}
 .on-campus .tile h3{color:#4b2e83;font-size:21px;margin-top:5px;font-weight:900}
 .on-campus .tile p{font-size:16px;line-height:1.6}
-.on-campus .tile p a{font-weight:700;color:#5a5a5a;position:relative}
+.on-campus .tile p a{font-weight:700;color:#545454;position:relative}
 .on-campus .tile p a.uw-btn{background-color:#fff}
 .on-campus .uw-on-campus h2{margin-bottom:-27px;margin-top:17px;padding:0 20px;display:inline-block;font-size:24px;color:#fff;position:relative}
 .on-campus .uw-on-campus h2:before,.on-campus .uw-on-campus h2:after{position:absolute;content:"";height:1px;width:340px;background-color:rgba(255,255,255,.2);display:block;bottom:13px}
@@ -1767,7 +1767,7 @@ table.services a { color:#444;}
 .menu-myuw-giving a, .menu-give-now a {
     font-size: 18px;
     text-transform: none;
-    color: #5a5a5a;
+    color: #545454;
     font-weight: 600;
     position: absolute;
     top: 5px;
