--- a/wp-content/themes/uwsod-2014/less/uw.variables.less
+++ b/wp-content/themes/uwsod-2014/less/uw.variables.less
@@ -5,8 +5,8 @@
 // Color swatches
 @purple: 		#4b2e83;
 @gray:  		#c9c9c9;
-@darkgray:		#5A5A5A;
-@link: 			#0074bb;
+@darkgray:		#545454;
+@link: 			#005b94;
 @brightgold: 	#ffd800;
 @ultralightgold:#e8e3d3;
 @lightgold:		#b7a57a;
